--- a/LeCongThienMVC/Views/Report/ReportResult.cshtml
+++ b/LeCongThienMVC/Views/Report/ReportResult.cshtml
@@ -5,6 +5,8 @@
     var totalPages = (int)Math.Ceiling((double)Model.TotalCount / Model.PageSize);
 }
 
+<a asp-action="Report" style="">Back</a>
+
 <div class="container mt-5">
     <div class="row justify-content-center">
         <div class="col-md-10">
