--- a/LeCongThienMVC/Views/SystemAccounts/Index.cshtml
+++ b/LeCongThienMVC/Views/SystemAccounts/Index.cshtml
@@ -6,14 +6,10 @@
 
 <div class="container mt-5">
     <h2 class="mb-4 text-primary">
-        <i class="fas fa-users-cog"></i> @ViewData["Title"]
+         @ViewData["Title"]
     </h2>
 
-    @* <div class="mb-3">
-        <a asp-action="Create" class="btn btn-primary">
-            <i class="fas fa-user-plus"></i> Create New Account
-        </a>
-    </div> *@
+    
     <div class="mb-3 text-end">
         <a asp-action="Create" class="btn btn-success d-inline-flex align-items-center shadow-sm">
             <i class="bi bi-plus-circle me-1"></i> Create New
@@ -31,15 +27,17 @@
         <select name="sortField" class="form-select me-2">
             <option value="AccountName" selected="@(ViewBag.CurrentSortField == "AccountName" ? "selected" : null)">Name</option>
             <option value="AccountEmail" selected="@(ViewBag.CurrentSortField == "AccountEmail" ? "selected" : null)">Email</option>
+            <option value="AccountRole" selected="@(ViewBag.CurrentSortField == "AccountRole" ? "selected" : null)">Role</option>
         </select>
 
-        @* <select name="sortDirection" class="form-select me-2">
+        <select name="sortDirection" class="form-select me-2">
             <option value="asc" selected="@(ViewBag.CurrentSortDirection == "asc" ? "selected" : null)">Ascending</option>
             <option value="desc" selected="@(ViewBag.CurrentSortDirection == "desc" ? "selected" : null)">Descending</option>
-        </select> *@
+        </select>
 
         <button type="submit" class="btn btn-primary">Search</button>
     </form>
+
 
     <div class="table-responsive">
         <table class="table table-bordered table-striped table-hover shadow-sm rounded">
